--- a/zelk.css
+++ b/zelk.css
@@ -2,7 +2,7 @@
            ▄▀  █▀▀ █   █▀▄
            ▀▀▀ ▀▀▀ ▀▀▀ ▀ ▀           */
 /*--------------IMPORTS------------- */
-@import url(https://schnensch0.github.io/zelk/main.css);
+@import url(https://raw.githubusercontent.com/dotargz/zelk-plus/main/main.css);
 @import url(https://crearts-community.github.io/Settings-Icons/clients/powercord.css);
 /*--------------COLORS---------------*/
 /*------remove / and * to apply------*/
