--- a/zelkBD.theme.css
+++ b/zelkBD.theme.css
@@ -11,7 +11,7 @@
            ▄▀  █▀▀ █   █▀▄
            ▀▀▀ ▀▀▀ ▀▀▀ ▀ ▀           */
  /*--------------IMPORTS------------- */
-@import url(https://schnensch0.github.io/zelk/main.css);
+@import url(https://raw.githubusercontent.com/dotargz/zelk-plus/main/main.css);
 @import url(https://discord-custom-covers.github.io/usrbg/dist/usrbg.css);
 @import url(https://mwittrien.github.io/BetterDiscordAddons/Themes/_res/SettingsIcons.css);
 /*--------------COLORS---------------*/
