--- a/zelkBD.theme.css
+++ b/zelkBD.theme.css
@@ -1,11 +1,11 @@
 /**
- * @name Zelk
- * @version 1.2.2
- * @description a smooth theme inspired by zorin
- * @author schnensch
- * @authorId 652801938374656013
- * @source https://github.com/schnensch0/zelk
- * @invite tMEcBhsNqA
+ * @name Zelk+
+ * @version 1.2.3
+ * @description a smooth theme forked from Zelk
+ * @author BlueSkye
+ * @authorId 788887558478233650
+ * @source https://github.com/dotargz/zelk-plus
+ * @invite hcUE7rueqR
  */
 /*         ▀▀█ █▀▀ █   █ █
            ▄▀  █▀▀ █   █▀▄
