--- a/zelkplus.css
+++ b/zelkplus.css
@@ -1,18 +1,22 @@
-/*         ▀▀█ █▀▀ █   █ █
-           ▄▀  █▀▀ █   █▀▄
-           ▀▀▀ ▀▀▀ ▀▀▀ ▀ ▀           */
+/*
+███████╗███████╗██╗░░░░░██╗░░██╗░░░░░░░
+╚════██║██╔════╝██║░░░░░██║░██╔╝░░██╗░░
+░░███╔═╝█████╗░░██║░░░░░█████═╝░██████╗
+██╔══╝░░██╔══╝░░██║░░░░░██╔═██╗░╚═██╔═╝
+███████╗███████╗███████╗██║░╚██╗░░╚═╝░░
+╚══════╝╚══════╝╚══════╝╚═╝░░╚═╝░░░░░░░*/
 /*--------------IMPORTS------------- */
 @import url(https://dotargz.github.io/zelk-plus/main.css);
 @import url(https://crearts-community.github.io/Settings-Icons/clients/powercord.css);
 /*--------------COLORS---------------*/
 /*------remove / and * to apply------*/
-/* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/blue.css); */
-/* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/green.css); */
-/* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/gray.css); */
-/* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/orange.css); */
-/* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/purple.css); */
-/* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/red.css); */
-/* @import url(https://raw.githack.com/schnensch0/zelk/main/colors/discord.css); */
+/* @import url(https://raw.githack.com/dotargz/zelk-plus/main/colors/blue.css); */
+/* @import url(https://raw.githack.com/dotargz/zelk-plus/main/colors/green.css); */
+/* @import url(https://raw.githack.com/dotargz/zelk-plus/main/colors/gray.css); */
+/* @import url(https://raw.githack.com/dotargz/zelk-plus/main/colors/orange.css); */
+/* @import url(https://raw.githack.com/dotargz/zelk-plus/main/colors/purple.css); */
+/* @import url(https://raw.githack.com/dotargz/zelk-plus/main/colors/red.css); */
+/* @import url(https://raw.githack.com/dotargz/zelk-plus/main/colors/discord.css); */
 /*-------------VARIABLES-------------*/
 :root {
   /* set to 'unset' to show */
