--- a/main.css
+++ b/main.css
@@ -101,6 +101,9 @@
   order: -2;
   margin-right: 8px;
 }
+.scroller-nxCRu_ {
+  padding: 6px 8px !important;
+}
 /* search bar */
 .search-39IXmY {
   margin: 1px 4px 1px 1px;
